--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,47 @@
 body {
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
+  font-family: sans-serif;
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+.calculator-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 8%;
+}
+
+.calculator-container .orange-color {
+  background-color: #f95;
+}
+
+.result {
+  width: 500px;
+  grid-column: 4 span;
+  background-color: #666;
+  color: white;
+  padding: 1rem;
+  text-align: right;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  overflow-y: auto;
+}
+
+.btn {
+  display: grid;
+  place-content: center;
+  padding: 1rem;
+  background-color: #ddd;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.btn-0 {
+  grid-column: 2 span;
+}
+
+.calculator-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
 }
