--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,6 @@
   color: #ddd;
 }
 
-html {
-  overflow-y: hidden;
-}
 
 body {
   background-color: #f5f5f7;
@@ -63,7 +60,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-}
+  }
 
 /* Navar Styling */
 .navbar {
@@ -122,18 +119,18 @@ body {
 }
 
 /* Calculartor Styling */
-.calculator-container h1 {
+
+.calculator-title  {
   color: #ff3f67;
   width: 400px;
   padding-top: 20px;
-  margin-right: 400px;
   font-size: 35px;
 }
 
 /* Quote Styling */
 .quote {
   padding: 0 10%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
