--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
   color: #ddd;
 }
 
-
 body {
   background-color: #f5f5f7;
   font-family: "Roboto", sans-serif;
@@ -60,7 +59,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-  }
+}
 
 /* Navar Styling */
 .navbar {
@@ -120,7 +119,7 @@ body {
 
 /* Calculartor Styling */
 
-.calculator-title  {
+.calculator-title {
   color: #ff3f67;
   width: 400px;
   padding-top: 20px;
@@ -146,4 +145,19 @@ body {
 .quote q {
   color: #ff3f67;
   font-weight: 400;
+}
+
+@media screen and (max-width: 768px) {
+  .calculator-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .result {
+    width: 400px;
+  }
+
+  .navbar {
+    width: 100%;
+  }
 }
